src/app/modules/newsfeed/activity/toolbar/toolbar.component.scss
m-activity__toolbar {
  display: flex;
  flex-direction: row;
  width: 100%;
  padding: 0 25px 16px;
  padding-top: $minds-padding * 2;
  box-sizing: border-box;
  text-align: center;

  @include m-theme() {
    border-top: 1px solid themed($m-borderColor--tertiary);
    background-color: themed($m-bgColor--secondary);
  }

  > * {
    margin-right: 22px;

    > a {
      line-height: 18px;

      i.material-icons {
        font-size: 18px;
      }

      i.material-icons,
      .minds-counter {
        vertical-align: middle;
        @include m-theme() {
          color: themed($m-textColor--secondary);
        }
      }

      &.selected {
        i.material-icons,
        .minds-counter {
          @include m-theme() {
            color: themed($m-blue);
          }
        }
      }
    }
  }

  minds-button-comment {
    cursor: pointer;
    .selected i.material-icons,
    .selected .minds-counter {
      @include m-theme() {
        color: themed($m-textColor--secondary);
      }
    }
  }

  :last-child {
    margin-right: 0;
  }

  m-wire-button {
    .m-wire-button {
      border: 0 !important;
      padding: 0;
      height: auto;
      > .ion-icon {
        @include m-theme() {
          color: themed($m-textColor--secondary);
        }
      }
      > * {
        @include m-theme() {
          color: themed($m-textColor--secondary);
        }
      }
      .m-icon__assetsFile {
        margin-right: 5px;
      }
      span {
        margin-left: 0;
        font-weight: 500;
      }
    }
  }

  .m-boostButton {
    width: auto;
    height: auto;
    min-width: unset;

    font-weight: 500;
    padding: 0;

    &,
    &:hover {
      @include m-theme() {
        border: 0;
      }
    }

    > m-icon {
      margin-right: 5px;
      vertical-align: middle;
    }
  }

  .m-activity--fixedHeight & {
    z-index: 1;
  }
}

